--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
+@font-face {
+  font-family: "Regular";
+  src: url("../fonts/Gilroy-Regular.woff") format("woff");
+  font-style: 400;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Medium";
+  src: url("../fonts/Gilroy-Medium.woff") format("woff");
+  font-style: 700;
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Bold";
+  src: url("../fonts/Gilroy-Bold.woff") format("woff");
+  font-style: 700;
+  font-weight: normal;
+}
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+  color: inherit;
+}
 
+.logo {
+  font-family: "Bold";
+}
 
 /*# sourceMappingURL=style.css.map */
