--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -3,5 +3,60 @@
     text-decoration: none
     color: inherit
 
+body
+    background: #44403F
+
+.header
+
+.navbar
+    display: flex
+    align-items: center
+
 .logo
     font-family: "Bold"
+    color: rgba(255, 255, 255, 1)
+    letter-spacing: 3px
+    font-size: 25px
+
+.search
+    display: inline-flex
+    color: rgba(207, 207, 207, 1)
+    background: rgba(80, 75, 74, 1)
+    padding: 10px 15px
+    border-radius: 10px
+
+    input
+        width: 100%
+        background: none
+        border: none
+
+.contacts
+    color: rgba(207, 207, 207, 1)
+    font-family: "Regular"
+    font-size: 12px
+    i
+        background: rgba(97, 137, 103, 1)
+        color: rgba(207, 207, 207, 1)
+        width: 16px
+        height: 16px
+    span
+        font-family: "Bold"
+        color: #fff
+        font-size: 16px
+
+.header-btn
+
+    button
+        background: rgba(97, 137, 103, 1)
+        border: inherit
+        color: #fff
+        width: 150px
+        height: 50px
+        border-radius: 10px
+
+    span
+        padding: 5px
+        border-radius: 100px
+        background: #fff
+        color: rgba(64, 60, 59, 1)
+        border-left: solid 1px #fff
