--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,20 @@ body {
   background: #44403F;
 }
 
+.container {
+  max-width: 1180px;
+  margin: 0 auto;
+}
+
 .navbar {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.hamburger-subtitel__text {
+  font-family: "Bold";
+  color: rgb(255, 255, 255);
 }
 
 .logo {
@@ -44,6 +55,8 @@ body {
   background: rgb(80, 75, 74);
   padding: 10px 15px;
   border-radius: 10px;
+  flex-grow: 1;
+  max-width: 555px;
 }
 .search input {
   width: 100%;
@@ -52,15 +65,22 @@ body {
 }
 
 .contacts {
+  display: flex;
   color: rgb(207, 207, 207);
   font-family: "Regular";
   font-size: 12px;
+  gap: 5px;
+  padding-right: 50px;
 }
 .contacts i {
+  display: inline-flex;
   background: rgb(97, 137, 103);
+  border-radius: 100%;
   color: rgb(207, 207, 207);
-  width: 16px;
-  height: 16px;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
 }
 .contacts span {
   font-family: "Bold";
@@ -69,19 +89,37 @@ body {
 }
 
 .header-btn button {
+  font-family: "Medium";
+  display: inline-flex;
   background: rgb(97, 137, 103);
+  align-items: center;
+  justify-content: center;
   border: inherit;
   color: #fff;
   width: 150px;
   height: 50px;
   border-radius: 10px;
+  gap: 10px;
 }
-.header-btn span {
+
+.basket {
+  display: flex;
+  border-right: solid 1px rgba(255, 255, 255, 0.3);
+  height: 35px;
+  align-items: center;
+  padding: 15px;
+}
+
+.counter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 5px;
-  border-radius: 100px;
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
   background: #fff;
   color: rgb(64, 60, 59);
-  border-left: solid 1px #fff;
 }
 
 /*# sourceMappingURL=style.css.map */
