--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,20 @@
   font-style: 700;
   font-weight: normal;
 }
+@media screen and (max-width: 778px) {
+  .hamburger {
+    display: block;
+  }
+  .contacts .number {
+    display: none;
+  }
+  .search {
+    flex-wrap: wrap;
+  }
+}
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
   text-decoration: none;
   color: inherit;
@@ -31,10 +44,18 @@ body {
   margin: 0 auto;
 }
 
+.header {
+  padding: 20px 0 20px 0;
+}
+
 .navbar {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.hamburger {
+  display: none;
 }
 
 .hamburger-subtitel__text {
@@ -120,6 +141,92 @@ body {
   border-radius: 100%;
   background: #fff;
   color: rgb(64, 60, 59);
+}
+
+.banner-nav {
+  border-bottom: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  color: rgb(207, 207, 207);
+  font-family: "Regular";
+  padding: 30px 0 30px 0;
+}
+.nav a {
+  transition: 1s;
+}
+.nav a:hover {
+  font-family: "Medium";
+}
+
+.card-titel-banner__text {
+  font-family: "Bold";
+  color: rgb(255, 255, 255);
+  padding: 50px 0 50px 10px;
+}
+.card-titel-banner__text h1 {
+  border-left: solid 4px rgb(97, 137, 103);
+  padding-left: 20px;
+}
+
+.card {
+  display: flex;
+  overflow-x: auto;
+  gap: 20px;
+}
+
+.card-content {
+  width: 325px;
+  color: rgb(255, 255, 255);
+  background: linear-gradient(90deg, #494544 0%, #504B4A 100%);
+  border-radius: 10px;
+}
+
+.card-img img {
+  border-radius: 10px 10px 0 0;
+}
+
+.continer-cadr__text {
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+.card-titel__text {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0 15px 0;
+}
+.card-titel__text .name {
+  font-family: "Bold";
+}
+.card-titel__text .heft {
+  font-family: "Regular";
+  font-size: 12px;
+}
+
+.description {
+  font-family: "Regular";
+  font-size: 13px;
+}
+
+.banner-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0 10px 0;
+}
+.banner-btn .price {
+  font-family: "Medium";
+}
+.banner-btn button {
+  background: linear-gradient(114.93deg, #618967 5.11%, #72A479 94%);
+  border-radius: 10px;
+  width: 137px;
+  height: 44px;
+  border: none;
 }
 
 /*# sourceMappingURL=style.css.map */
