--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,4 +1,6 @@
 *
+    padding: 0
+    margin: 0
     box-sizing: border-box
     text-decoration: none
     color: inherit
@@ -10,10 +12,16 @@ body
     max-width: 1180px
     margin: 0 auto
 
+.header
+    padding: 20px 0 20px 0
+
 .navbar
     display: flex
     align-items: center
     justify-content: space-between
+
+.hamburger
+    display: none
 
 .hamburger-subtitel__text
     font-family: "Bold"
