--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -100,3 +100,8 @@ body
     border-radius: 100%
     background: #fff
     color: rgba(64, 60, 59, 1)
+
+.maps
+    max-width: 80vw
+    height: 70vh
+    filter: invert(100%)
